create view for manager pages

--- a/app/styles/vienvong.scss
+++ b/app/styles/vienvong.scss
@@ -414,52 +414,70 @@ $post-bgc: #fff;
   margin: 15px auto;
 }
 
-.post {
-  background-color: $post-bgc;
-  margin-bottom: 15px !important;
-  border: 1px solid $border-color;
-}
-
 .post:hover {
   border-color: $second-bgc;
 }
 
-//---------------------
+.post {
+  background-color: $post-bgc;
+  margin-bottom: 15px !important;
+  border: 1px solid $border-color;
 
-/* Flexible image size*/
-.post .post-avatar {
-}
+  $height_post: 0;
 
-.post .post-avatar .avatar{
-  position: relative;
-  width: 100%;		/* desired width */
-}
-.post .post-avatar .avatar:before{
-  content: "";
-  display: block;
-  padding-top: 100% * (9/16); 	/* initial ratio of 1:1*/
-}
-.post .post-avatar img{
-  position:  absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
+  /* Flexible image size*/
+  .post-avatar {
+  }
 
-.post .post-avatar img {
-  width: 100%;
-  height: 100%;
-}
+  .post-avatar .avatar{
+    position: relative;
+    width: 100%;		/* desired width */
+  }
 
-/* end flexible image size*/
+  .post-avatar .avatar:before{
+    content: "";
+    display: block;
+    $height_post: 100% * (9/16);
+    padding-top: $height_post; 	/* initial ratio of 1:1*/
+  }
 
-.post p {
-  margin-top: 7px;
-}
+  .post-avatar img{
+    position:  absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
 
-.post .post-title p{
-  font-size: large;
+  .post-avatar img {
+    width: 100%;
+    height: 100%;
+  }
+
+  /* end flexible image size*/
+
+  /* Post detail*/
+  p {
+    margin-top: 7px;
+  }
+
+  .post-title {
+    max-height: 55px;
+    margin-bottom: 5px;
+    overflow: hidden;
+  }
+
+  .post-title p{
+    font-size: large;
+  }
+
+  .manager-actions .btn{
+    padding: 3px 6px;
+    margin-top: 7px;
+    margin-bottom: 3px;
+  }
+  /*end post detail*/
+
 }
 
 @media (max-width: $screen-md-max) {
