--- a/app/views/mainMenu.html
+++ b/app/views/mainMenu.html
@@ -25,7 +25,10 @@
                 <a href="/support"><i class="fa fa-support fa-fw"></i> Support</a>
             </li>
             <li class="m-document">
-                <a href="/manage"><i class="fa fa-clipboard fa-fw"></i> Manage</a>
+                <a href="/manager"><i class="fa fa-clipboard fa-fw"></i> Manage Posts</a>
+            </li>
+            <li class="m-document">
+                <a href="/users"><i class="fa fa-users fa-fw"></i> Manager Users</a>
             </li>
 
         </ul>
