module structure complete

--- a/app/views/mainMenu.html
+++ b/app/views/mainMenu.html
@@ -25,12 +25,14 @@
                 <a href="/support"><i class="fa fa-support fa-fw"></i> Support</a>
             </li>
             <li class="m-document">
-                <a href="/manager"><i class="fa fa-clipboard fa-fw"></i> Manage Posts</a>
+                <a href="/manager/posts"><i class="fa fa-clipboard fa-fw"></i> Manage Posts</a>
             </li>
             <li class="m-document">
-                <a href="/users"><i class="fa fa-users fa-fw"></i> Manager Users</a>
+                <a href="/manager/users"><i class="fa fa-users fa-fw"></i> Manager Users</a>
             </li>
-
+            <li class="m-document">
+                <a href="/manager/roles"><i class="fa fa-users fa-fw"></i> Manager Role</a>
+            </li>
         </ul>
     </div>
 </div>
