--- a/app/views/template.html
+++ b/app/views/template.html
@@ -104,59 +104,59 @@
         </div>
     </div>
 </div>
-<div class="section container">
-    <div class="express">
-        <div class="main-menu main-menu-hide col-ss-12 col-xs-5 col-sm-3 col-md-2 col-lg-2 none-space"
-             ng-class="{'main-menu-show':(main_menu&&option=='main_menu')}"
-             off-click="main_menu=false" off-click-filter=".menu-button"
-             ng-include="'views/mainMenu.html'">
-        </div>
-        <div ui-view id="Middle" class="col-ss-12 col-xs-6 col-sm-8 col-md-6 col-lg-6">
-        </div>
-        <div class="col-ss-0 col-xs-6 col-sm-4 col-md-4 col-lg-4">
-            <div class="box-title">Blog Posts</div>
-            <hr>
-            <div class="list-blog">
-                <div class="post container-fluid none-space">
-                    <div class="post-avatar">
-                        <div class="avatar col-lg-12 none-space">
-                            <img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">
-                        </div>
-                    </div>
-                    <div class="post-description col-lg-12">
-                        <div class="post-info">
-                            <p>29-11-2014 15:04</p>
-                        </div>
-                        <div class="post-title">
-                            <p>10 creative recipes to reinvent your Thanksgiving leftovers</p>
-                        </div>
-                        <div class="post-social">
+<div class="section container" ui-view>
+    <!--<div class="express">-->
+        <!--<div class="main-menu main-menu-hide col-ss-12 col-xs-5 col-sm-3 col-md-2 col-lg-2 none-space"-->
+             <!--ng-class="{'main-menu-show':(main_menu&&option=='main_menu')}"-->
+             <!--off-click="main_menu=false" off-click-filter=".menu-button"-->
+             <!--ng-include="'views/mainMenu.html'">-->
+        <!--</div>-->
+        <!--<div ui-view id="Middle" class="col-ss-12 col-xs-6 col-sm-8 col-md-6 col-lg-6">-->
+        <!--</div>-->
+        <!--<div class="col-ss-0 col-xs-6 col-sm-4 col-md-4 col-lg-4">-->
+            <!--<div class="box-title">Blog Posts</div>-->
+            <!--<hr>-->
+            <!--<div class="list-blog">-->
+                <!--<div class="post container-fluid none-space">-->
+                    <!--<div class="post-avatar">-->
+                        <!--<div class="avatar col-lg-12 none-space">-->
+                            <!--<img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="post-description col-lg-12">-->
+                        <!--<div class="post-info">-->
+                            <!--<p>29-11-2014 15:04</p>-->
+                        <!--</div>-->
+                        <!--<div class="post-title">-->
+                            <!--<p>10 creative recipes to reinvent your Thanksgiving leftovers</p>-->
+                        <!--</div>-->
+                        <!--<div class="post-social">-->
 
-                        </div>
-                    </div>
-                </div>
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
 
-                <div class="post container-fluid none-space">
-                    <div class="post-avatar">
-                        <div class="avatar col-lg-12 none-space">
-                            <img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">
-                        </div>
-                    </div>
-                    <div class="post-description col-lg-12">
-                        <div class="post-info">
-                            <p>29-11-2014 15:04</p>
-                        </div>
-                        <div class="post-title">
-                            <p>10 creative recipes to reinvent your Thanksgiving leftovers</p>
-                        </div>
-                        <div class="post-social">
+                <!--<div class="post container-fluid none-space">-->
+                    <!--<div class="post-avatar">-->
+                        <!--<div class="avatar col-lg-12 none-space">-->
+                            <!--<img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="post-description col-lg-12">-->
+                        <!--<div class="post-info">-->
+                            <!--<p>29-11-2014 15:04</p>-->
+                        <!--</div>-->
+                        <!--<div class="post-title">-->
+                            <!--<p>10 creative recipes to reinvent your Thanksgiving leftovers</p>-->
+                        <!--</div>-->
+                        <!--<div class="post-social">-->
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
 <div class="footer gradient container">
     <div class="footer-box"></div>
