--- a/app/scripts/modules/static/views/home.html
+++ b/app/scripts/modules/static/views/home.html
@@ -1,79 +1,30 @@
 <div class="box-title">All Posts</div>
 <hr>
 <div class="list-post">
-    <div class="post container-fluid none-space">
+    <div class="post container-fluid none-space" ng-repeat="post in listPost">
         <div class="post-avatar col-lg-5 col-md-12 col-sm-5 none-space">
             <div class="avatar col-lg-12 none-space">
-                <img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">
+                <img src="{{post.avatar}}">
             </div>
         </div>
         <div class="post-description col-lg-7 col-md-12 col-sm-7">
-            <div class="post-info">
-                <p>29-11-2014 15:04</p>
-            </div>
             <div class="post-title">
-                <p>10 creative recipes to reinvent your Thanksgiving leftovers</p>
+                <a href="/view/{{post.id}}#{{post.friendly_title}}">
+                    <p>{{post.title}}</p>
+                </a>
+            </div>
+            <div class="post-info">
+                <p>{{post.time}}</p>
             </div>
             <div class="post-social">
 
             </div>
         </div>
     </div>
+    <!--<div class="btn btn-info pull-right">-->
+    <a href="" class="pull-right" ng-click="loadMore();">
+        <i class="fa fa-plus"></i> Show More
+    </a>
 
-    <div class="post container-fluid none-space">
-        <div class="post-avatar col-lg-5 col-md-12 col-sm-5 none-space">
-            <div class="avatar col-lg-12 none-space">
-                <img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">
-            </div>
-        </div>
-        <div class="post-description col-lg-7 col-md-12 col-sm-7">
-            <div class="post-info">
-                <p>29-11-2014 15:04</p>
-            </div>
-            <div class="post-title">
-                <p>10 creative recipes to reinvent your Thanksgiving leftovers</p>
-            </div>
-            <div class="post-social">
-
-            </div>
-        </div>
-    </div>
-
-    <div class="post container-fluid none-space">
-        <div class="post-avatar col-lg-5 col-md-12 col-sm-5 none-space">
-            <div class="avatar col-lg-12 none-space">
-                <img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">
-            </div>
-        </div>
-        <div class="post-description col-lg-7 col-md-12 col-sm-7">
-            <div class="post-info">
-                <p>29-11-2014 15:04</p>
-            </div>
-            <div class="post-title">
-                <p>10 creative recipes to reinvent your Thanksgiving leftovers</p>
-            </div>
-            <div class="post-social">
-
-            </div>
-        </div>
-    </div>
-
-    <div class="post container-fluid none-space">
-        <div class="post-avatar col-lg-5 col-md-12 col-sm-5 none-space">
-            <div class="avatar col-lg-12 none-space">
-                <img src="http://dantri4.vcmedia.vn/y0V2Vnsx49nhQPv7HdH/Image/2013/07/tlinh16071311-d66d5.jpg">
-            </div>
-        </div>
-        <div class="post-description col-lg-7 col-md-12 col-sm-7">
-            <div class="post-info">
-                <p>29-11-2014 15:04</p>
-            </div>
-            <div class="post-title">
-                <p>10 creative recipes to reinvent your Thanksgiving leftovers</p>
-            </div>
-            <div class="post-social">
-
-            </div>
-        </div>
-    </div>
+    <!--</div>-->
 </div>
