auth login and logout actions complete

--- a/app/styles/vienvong.scss
+++ b/app/styles/vienvong.scss
@@ -313,6 +313,15 @@ $header-color: #fff;
       height: 58px;
       border: 1px solid $g-plus-color;
     }
+
+    .end-box a {
+//      color: #dd4b39;
+      color: #000000;
+    }
+
+    .end-box a i {
+      color: #dd4b39;
+    }
   }
 }
 
