auth login status complete

--- a/app/scripts/modules/user/views/user_template.html
+++ b/app/scripts/modules/user/views/user_template.html
@@ -1,7 +1,7 @@
 <div class="express">
     <div class="main-menu main-menu-hide col-ss-12 col-xs-5 col-sm-3 col-md-2 col-lg-2 none-space"
          ng-class="{'main-menu-show':(main_menu&&option=='main_menu')}"
-         ng-include="'views/mainMenu.html'">
+         ng-include="userMenuPath">
     </div>
     <div ui-view id="Middle" class="col-ss-12 col-xs-6 col-sm-8 col-md-6 col-lg-6">
     </div>
